# credit-risk-modeling

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
credit_risk_modeling/: __init__.py  dataset.py  features.py  plots.py
credit_risk_modeling/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: linear_model_prototyping.ipynb  linear_preprocessed_pipeline.pkl  neural_preprocessed_pipeline.pkl  tree_preprocessed_pipeline.pkl
notebooks/: EDA.ipynb  linear_model_prototyping.ipynb  preprocessing.ipynb
